--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 
 jobs:
   build:
-    working_directory: ~/circleci-demo
+    working_directory: ~/circleci-demo/src
     docker:
       - image: "circleci/python:3.6.4"
     steps:
@@ -14,7 +14,7 @@ jobs:
       - image: "circleci/python:3.6.4"
     steps:
       - checkout
-      - run: python3 test_main.py
+      - run: python3 main-test.py
 
 workflows:
   build_and_test:
