--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,14 @@ version: 2.1
 
 jobs:
   build:
-    working_directory: ~/circleci-demo/src
+    working_directory: circleci-demo/src
     docker:
       - image: "circleci/python:3.6.4"
     steps:
       - checkout
       - run: python3 main.py
   test:
-    working_directory: ~/circleci-demo/test
+    working_directory: circleci-demo/test
     docker:
       - image: "circleci/python:3.6.4"
     steps:
