--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - image: "circleci/python:3.6.4"
     steps:
       - checkout
-      - run: python3 main-test.py
+      - run: python3 -m unittest test.test_main -v
 
 workflows:
   build_and_test:
