--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,22 @@
 version: 2.1
 
 jobs:
-  build_and_test: # this can be any name you choose
-    executor: python/default # use the default executor defined within the orb
+  test-and-lint:
+    docker:
+      - image: cimg/python:3.10.1
     steps:
-      - checkout # checkout source code
-      - python/install-packages:
-          pkg-manager: pip
+      - checkout
       - run:
-          name: Run tests
-          command: python -m pytest
-      - persist_to_workspace:
-          root: ~/circleci-demo
-          paths:
-            - .
+          name: install dependencies
+          command: pip install -r requirements.txt
+      - run:
+          name: lint
+          command: pylint src/ test/
+      - run:
+          name: run tests
+          command: python manage.py test
+
+workflows:
+  build-and-test-workflow:
+    jobs:
+      - test-and-lint
