--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           command: pip install -r requirements.txt
       - run:
           name: run tests
-          command: python manage.py test
+          command: python -m unittest test/test_main.py
 
 workflows:
   build-and-test-workflow:
